salesforce/generated/TNS_ingest_api/objects/TNS_LeadIntelligence__dll/fields/bombora_surge_topic__c.field-meta.xml
<CustomField>
    <fullName>bombora_surge_topic__c</fullName>
    <label>bombora_surge_topic</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>bombora_surge_topic</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>