salesforce/generated/TNS_ingest_api/objects/TNS_LeadIntelligence__dll/fields/campaign_name__c.field-meta.xml
<CustomField>
    <fullName>campaign_name__c</fullName>
    <label>campaign_name</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>campaign_name</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>