salesforce/generated/TNS_ingest_api/objects/TNS_LeadIntelligence__dll/fields/lead_score__c.field-meta.xml
<CustomField>
    <fullName>lead_score__c</fullName>
    <label>lead_score</label>
    <precision>18</precision>
    <scale>6</scale>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>lead_score</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Number</type>
</CustomField>