salesforce/generated/TNS_ingest_api/objects/TNS_LeadIntelligence__dll/fields/mql_source__c.field-meta.xml
<CustomField>
    <fullName>mql_source__c</fullName>
    <label>mql_source</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>mql_source</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>